--- a/.gitignore
+++ b/.gitignore
@@ -339,12 +339,10 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
-# Data
-**/data
-#???
-*.txt
+input*
+output*
+imata*
 
-# why no gitignore my files???
 *.gch
 Jamin_Bot/debug.exe
 Jamin_Bot/a.exe
