fix a lot of bugs and rewrite search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "C:\\Users\\leewe.DESKTOP-R85QH5T\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "C:\\Users\\leewe.DESKTOP-R85QH5T\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
+    "files.associations": {
+        "utility": "cpp",
+        "thread": "cpp",
+        "xstring": "cpp",
+        "random": "cpp"
+    }
 }
