--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\gmobi\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
+    "python.pythonPath": "C:\\Users\\leewe.DESKTOP-R85QH5T\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
     "files.associations": {
         "utility": "cpp",
         "thread": "cpp",
