--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
+"discord.py" = "*"
 pillow = "*"
 topggpy = "*"
 python-chess = "*"
